--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "flightphp/core": "^3.7",
         "ext-gd": "*",
         "phpoffice/phpspreadsheet": "^2.0",
-        "dompdf/dompdf": "^2.0"
+        "dompdf/dompdf": "^2.0",
+        "phpmailer/phpmailer": "^6.9"
     }
 }
