--- a/SSST/.gitignore
+++ b/SSST/.gitignore
@@ -1,2 +1,11 @@
 vendor/
 ./vendor
+../CSST/
+        ../applications.html
+        ../bitnami.css
+        ../dashboard/
+        ../favicon.ico
+        ../img/
+        ../index.php
+        ../xampp/
+
